--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,50 @@
+.navbar{
+    width: 100%;
+    height: 60px;
+    margin-top: -15px; /*I still cant figure out why this is needed when body has 0 margin*/
+    background-color: #051126;
+    
+}
 
 .navbar ul{
+    height: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: left;
+    align-items: center;
     list-style-type: none;
+    padding:0;
 }
+
+.logo{
+    margin-left: 1em;
+    width:30px;
+    height:30px;
+    padding-bottom: 10px;
+    color:#a4bcbc;
+
+    font-size: 2em;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+
+    border-bottom: 0.1em solid #7c587f;
+    user-select: none;
+    
+}
+
+.links{
+    margin-left: 1em;
+    text-decoration: none;
+    font-size: 1.25em;
+    color:white;
+    font-family: Arial, Helvetica, sans-serif;
+    
+
+}
+
+.links:hover{
+    opacity: 0.5;
+}
+
+
+
+
