--- a/src/components/WebsiteTitle/WebsiteTitle.css
+++ b/src/components/WebsiteTitle/WebsiteTitle.css
@@ -1,3 +1,22 @@
 .web-title{
-    text-align: center;
+    width: 100%;
+    height: 30vh;
+    margin-bottom: 3vh;
+    display:flex;
+    justify-content: center;
+    align-items: flex-end;
+    font-size: 4em;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color:#a4bcbc;
+    user-select: none;
+}
+
+.web-title .ex{
+    color:#7c587f;
+}
+
+.web-title .bottom-w{
+    border-bottom: 0.1em solid #7c587f;
+    position: relative;
+    bottom: -0.1em;
 }
