--- a/src/components/ApiInterface/ApiInterface.css
+++ b/src/components/ApiInterface/ApiInterface.css
@@ -1,7 +1,41 @@
-.bar-button-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.find-description{
+    font-size:1.3em;
+    color:#a4bcbc;
+}
+
+.input-bar{
+    padding: 5px 15px;
+    border-top-left-radius: 1em;
+    border-bottom-left-radius: 1em;
+    border:none;
+    font-size:1.1em;
+}
+
+.input-bar:focus{
+    outline: none;
+}
+
+.input-button{
+    padding: 5px 25px 5px 20px;
+    border-top-right-radius: 1em;
+    border-bottom-right-radius: 1em;
+    font-size:1.1em;
+    background-color: #7c587f;
+    color:white;
+}
+
+.input-button:disabled{
+    opacity:0.5;
+    color:#7c587f;
+    border: none;
+}
+
+.input-button:enabled{
+    border: none;
+}
+
+.input-button:enabled:hover{
+    opacity:0.5;
 }
 
 .interface-container{
@@ -9,4 +43,27 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.interface-container ul{
+    width: 50vw;
+    padding: 1em;
+    background-color: #7c587f;
+    border-radius: 1em;
+    color:white;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.interface-container ul:empty{
+    display: None;
+}
+
+
+.interface-container li{
+    position:relative;
+    padding:2em 2em;
+    list-style: none;
+    text-align: center;
 }
